force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <label>Visit</label>
    <nameField>
        <displayFormat>VISIT-{0000}</displayFormat>
        <label>Visitor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>