force-app/main/default/objects/Visit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit</relationshipLabel>
    <relationshipName>Visit</relationshipName>
    <type>Lookup</type>
</CustomField>