force-app/main/default/objects/Visit__c/fields/Actual_visit_date__c.field-meta.xml
<CustomField>
    <fullName>Actual_visit_date__c</fullName>
    <label>Actual visit date</label>
    <type>Date</type>
</CustomField>