force-app/main/default/objects/Visit__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit</relationshipName>
    <type>Lookup</type>
</CustomField>