force-app/main/default/objects/Visit__c/fields/Beat_Type__c.field-meta.xml
<CustomField>
    <fullName>Beat_Type__c</fullName>
    <formula>KPI_Target__r.KPI_Target_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Beat Type</label>
    <type>Text</type>
</CustomField>