force-app/main/default/objects/Visit__c/fields/Check_Out__c.field-meta.xml
<CustomField>
    <fullName>Check_Out__c</fullName>
    <label>Check Out</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>