force-app/main/default/objects/Visit__c/fields/CheckIn__c.field-meta.xml
<CustomField>
    <fullName>CheckIn__c</fullName>
    <label>CheckIn</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>