force-app/main/default/objects/Visit__c/fields/Delivery_Agent__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit</relationshipLabel>
    <relationshipName>Visit</relationshipName>
    <type>Lookup</type>
</CustomField>