force-app/main/default/objects/Visit__c/fields/Distance__c.field-meta.xml
<CustomField>
    <fullName>Distance__c</fullName>
    <formula>DISTANCE(GEOLOCATION( Check_Out__Latitude__s , Check_Out__Longitude__s ),GEOLOCATION( CheckIn__Latitude__s ,  CheckIn__Longitude__s ), &apos;km&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>