force-app/main/default/objects/Visit__c/fields/Distance_Km__c.field-meta.xml
<CustomField>
    <fullName>Distance_Km__c</fullName>
    <label>Distance (Km)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>