force-app/main/default/objects/Visit__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <formula>IF 
(
FLOOR((Check_Out_Time__c-Check_In_Time__c)*24)&gt;9,
TEXT(FLOOR((Check_Out_Time__c-Check_In_Time__c)*24)),
&quot;0&quot; &amp; TEXT(FLOOR((Check_Out_Time__c-Check_In_Time__c)*24))
 )
&amp;&quot;.&quot;&amp;  
IF
(
ROUND(MOD((Check_Out_Time__c-Check_In_Time__c)*1440,60),0)&gt;9,
TEXT(ROUND(MOD((Check_Out_Time__c-Check_In_Time__c)*1440,60),0)),
&quot;0&quot; &amp; TEXT(ROUND(MOD((Check_Out_Time__c-Check_In_Time__c)*1440,60),0))
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <type>Text</type>
</CustomField>