force-app/main/default/objects/Visit__c/fields/Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Date__c</fullName>
    <label>Expected End Date</label>
    <type>Time</type>
</CustomField>