force-app/main/default/objects/Visit__c/fields/Expected_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_End_Time__c</fullName>
    <label>Expected End Time</label>
    <type>Time</type>
</CustomField>