force-app/main/default/objects/Visit__c/fields/KPI_Target__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>KPI Target</label>
    <referenceTo>KPI_Target__c</referenceTo>
    <relationshipLabel>Visit</relationshipLabel>
    <relationshipName>Visit</relationshipName>
    <type>Lookup</type>
</CustomField>