force-app/main/default/objects/Visit__c/fields/KPI_Target_Name__c.field-meta.xml
<CustomField>
    <fullName>KPI_Target_Name__c</fullName>
    <formula>KPI_Target__r.KPI_Target_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KPI Target Name</label>
    <type>Text</type>
</CustomField>