force-app/main/default/objects/Visit__c/fields/MBPID__c.field-meta.xml
<CustomField>
    <fullName>MBPID__c</fullName>
    <formula>CASESAFEID(Weekly_Beat_Plan__r.Monthly_Beat_Plan__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MBPID</label>
    <type>Text</type>
</CustomField>