force-app/main/default/objects/Visit__c/fields/Night_Stay__c.field-meta.xml
<CustomField>
    <fullName>Night_Stay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Night Stay?</label>
    <type>Checkbox</type>
</CustomField>