force-app/main/default/objects/Visit__c/fields/Parent_visit__c.field-meta.xml
<CustomField>
    <fullName>Parent_visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Visit</relationshipLabel>
    <relationshipName>Visit</relationshipName>
    <type>Lookup</type>
</CustomField>