force-app/main/default/objects/Visit__c/fields/Planned_visit_date__c.field-meta.xml
<CustomField>
    <fullName>Planned_visit_date__c</fullName>
    <label>Planned visit date</label>
    <type>Date</type>
</CustomField>