force-app/main/default/objects/Visit__c/fields/Route_Name__c.field-meta.xml
<CustomField>
    <fullName>Route_Name__c</fullName>
    <formula>TEXT(Route__r.Route_Name_del__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Name</label>
    <type>Text</type>
</CustomField>