force-app/main/default/objects/Visit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(AND(NOT(ISNULL(Visit_Plan__r.End_Location__c)), ISNULL(Check_Out__c)), &apos;LAPSE&apos;, IF(AND(ISNULL(CheckIn__c),ISNULL(Check_Out__c)) , &apos;PENDING&apos;, IF(AND(NOT(ISNULL(CheckIn__c)),ISNULL(Check_Out__c)),&apos;INPROGRESS&apos;,&apos;COMPLETED&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>