force-app/main/default/objects/Visit__c/fields/Visit_Plan__c.field-meta.xml
<CustomField>
    <fullName>Visit_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Day Visit Plan</label>
    <referenceTo>Day_Visit_Plan__c</referenceTo>
    <relationshipLabel>Visit</relationshipLabel>
    <relationshipName>Visit</relationshipName>
    <type>Lookup</type>
</CustomField>