force-app/main/default/objects/Visit__c/fields/Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>Visit_Status__c</fullName>
    <label>Visit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
                <default>true</default>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>Sent For Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Re-Schedule</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>