force-app/main/default/objects/Visit__c/fields/Visit_Time__c.field-meta.xml
<CustomField>
    <fullName>Visit_Time__c</fullName>
    <formula>LEFT(TEXT(TIMEVALUE( Visit_Date_Time__c )), 5)</formula>
    <label>Visit Time</label>
    <type>Text</type>
</CustomField>