force-app/main/default/objects/Visit__c/fields/Weekly_Beat_Plan__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Beat_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weekly Beat Plan</label>
    <referenceTo>Weekly_Beat_Plan__c</referenceTo>
    <relationshipLabel>Visit</relationshipLabel>
    <relationshipName>Visit</relationshipName>
    <type>Lookup</type>
</CustomField>