force-app/main/default/objects/Visit__c/listViews/COMPLETED_VISIT.listView-meta.xml
<ListView>
    <fullName>COMPLETED_VISIT</fullName>
    <columns>NAME</columns>
    <columns>Assigned_User__c</columns>
    <columns>Actual_visit_date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>COMPLETED</value>
    </filters>
    <label>Visits Completed</label>
</ListView>