force-app/main/default/objects/Visit__c/listViews/TODAY.listView-meta.xml
<ListView>
    <fullName>TODAY</fullName>
    <columns>NAME</columns>
    <columns>Actual_visit_date__c</columns>
    <columns>Assigned_User__c</columns>
    <columns>Check_Out__Latitude__s</columns>
    <columns>Check_Out__Longitude__s</columns>
    <columns>CheckIn__Latitude__s</columns>
    <columns>CheckIn__Longitude__s</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CREATED_DATE</columns>
    <columns>Visit_Plan__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>TODAY</label>
</ListView>