force-app/main/default/objects/Visit__c/listViews/Tomorrow_Visit.listView-meta.xml
<ListView>
    <fullName>Tomorrow_Visit</fullName>
    <columns>NAME</columns>
    <columns>Actual_visit_date__c</columns>
    <columns>Check_In_Time__c</columns>
    <columns>CheckIn__Latitude__s</columns>
    <columns>City__c</columns>
    <columns>Assigned_User__c</columns>
    <columns>Status__c</columns>
    <columns>Delivery_Agent__c</columns>
    <columns>Visit_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Actual_visit_date__c</field>
        <operation>equals</operation>
        <value>TOMORROW</value>
    </filters>
    <label>Tomorrow Visit</label>
</ListView>